--- a/order/index.html
+++ b/order/index.html
@@ -1,69 +1,35 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=<title>Stone Grill — Order Online | Sizzling Plates, Seafood & Filipino Favorites</title>
-<meta name="description" content="Skip the wait. Order your Stone Grill favorites online — sizzling plates, seafood, and Filipino classics. Dine-in or take-out. Fast confirmation.">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Stone Grill — Online Order</title>
+  <meta name="description" content="Order sizzling meals from Stone Grill Restaurant — Enjoyable & Relaxing." />
 
-<!-- ✅ Facebook / Messenger / Instagram -->
-<meta property="og:title" content="Stone Grill — Order Online Now">
-<meta property="og:description" content="Hot, fresh, and ready when you are. Order sizzling plates, seafood, and Filipino favorites. Dine-in or take-out. Fast confirmation.">
-<meta property="og:image" content="https://stonegrillresto.net/order/assets/stonegrill-seafood-boodle.jpg">
-<meta property="og:url" content="https://stonegrillresto.net/order/">
-<meta property="og:type" content="website">
-
-<!-- ✅ Twitter (X) -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Stone Grill — Order Online Now">
-<meta name="twitter:description" content="Hot, fresh, and ready when you are. Dine-in or take-out. Fast confirmation.">
-<meta name="twitter:image" content="https://stonegrillresto.net/order/assets/stonegrill-seafood-boodle.jpg">
-
-  <!-- PWA -->
+  <!-- PWA (optional) -->
   <link rel="manifest" href="pwa/manifest.webmanifest">
-  <meta name="theme-color" content="#ff7a00">
+  <meta name="theme-color" content="#8db600">
 
   <!-- Icons -->
   <link rel="icon" href="assets/icons/favicon-32.png" sizes="32x32">
   <link rel="apple-touch-icon" href="assets/icons/apple-touch-180.png">
 
-  <link rel="stylesheet" href="style.css?v=10">
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css?v=13">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Stone Grill -- Online Order">
+  <meta property="og:title" content="Stone Grill — Online Order">
   <meta property="og:description" content="Fast, easy online ordering. Dine-in or take-out.">
-  <meta property="og:image" content="https://stonegrillresto.net/order/assets/stonegrill-seafood-boodle.jpg">
+  <meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
   <meta property="og:url" content="https://stonegrillresto.net/order/">
 
-  <!-- Ensure .hidden works even if old CSS is cached -->
+  <!-- Safety: ensure .hidden works even if CSS fails -->
   <style>.hidden{display:none!important}</style>
- <!-- ✅ SEO Title & Description -->
-
-<!-- ✅ Structured Data (helps Google show rich results) -->
-<script type="application/ld+json">
-{
-  "@context":"https://schema.org",
-  "@type":"Restaurant",
-  "name":"Stone Grill Restaurant",
-  "url":"https://stonegrillresto.net/",
-  "image":"https://stonegrillresto.net/assets/stonegrill-seafood-boodle.jpg",
-  "slogan":"Enjoyable and Relaxing",
-  "servesCuisine":["Filipino","Seafood","Grill"],
-  "telephone":"053 568 0539",
-  "sameAs":["https://www.facebook.com/stonecitygrill"],
-  "hasMenu":"https://stonegrillresto.net/order/",
-  "potentialAction":{
-    "@type":"OrderAction",
-    "target":"https://stonegrillresto.net/order/",
-    "deliveryMethod":["https://schema.org/OnSitePickup"],
-    "name":"Order Online"
-  }
-}
-</script>
 </head>
 <body>
+  <!-- Header -->
   <header class="app-header">
-    <!-- Clickable brand + your requested logo -->
-    <a href="/" class="brand">
+    <a href="/" class="brand" aria-label="Stone Grill home">
       <img id="logoImg" src="assets/icons/icon-192.png" alt="Stone Grill" class="logo">
       <div class="brand-text">
         <h1>Stone Grill</h1>
@@ -71,56 +37,36 @@
       </div>
     </a>
 
+    <!-- Cart summary (stacked: label -> total -> checkout) -->
     <div class="cart-summary">
-      <span class="total-label">Total:</span>
-      <span id="cartTotal" class="total-value">₱0.00</span>
+      <div class="total-label">Total</div>
+      <div id="cartTotal" class="total-value">₱0</div>
       <button id="checkoutBtn" class="btn primary">Checkout</button>
     </div>
   </header>
 
+  <!-- Main -->
   <main class="app-main">
+    <!-- Menu -->
     <section class="menu-col">
-      <!-- Category Buttons -->
-    
-<div class="category-bar" id="categoryBar">
-  <button onclick="showCategory('pork')"><span class="cat-emoji">🐖</span><span>Pork</span></button>
-  <button onclick="showCategory('chicken')"><span class="cat-emoji">🐓</span><span>Chicken</span></button>
-  <button onclick="showCategory('beef')"><span class="cat-emoji">🐄</span><span>Beef</span></button>
-  <button onclick="showCategory('vegetables')"><span class="cat-emoji">🥦</span><span>Veggies</span></button>
-  <button onclick="showCategory('fish')"><span class="cat-emoji">🐟</span><span>Fish</span></button>
-  <button onclick="showCategory('noodles')"><span class="cat-emoji">🍜</span><span>Noodles/Pasta</span></button>
-  <button onclick="showCategory('bbq')"><span class="cat-emoji">🔥</span><span>Grilled/BBQ</span></button>
-  <button onclick="showCategory('soup')"><span class="cat-emoji">🍲</span><span>Soup</span></button>
-  <button onclick="showCategory('squid')"><span class="cat-emoji">🦑</span><span>Squid</span></button>
-  <button onclick="showCategory('shrimp')"><span class="cat-emoji">🦐</span><span>Shrimp</span></button>
-  <button onclick="showCategory('crabs')"><span class="cat-emoji">🦀</span><span>Crabs</span></button>
-  <button onclick="showCategory('setMeals')"><span class="cat-emoji">🍱</span><span>Set Meal</span></button>
-<button onclick="showCategory('rice')"><span class="cat-emoji">🍚</span><span>Rice</span></button>
+      <!-- Category buttons will be built dynamically -->
+      <div class="category-bar" id="categoryBar"></div>
 
-  <!-- ✅ Set Meal restored -->
-  <button onclick="showCategory('setMeals')"><span class="cat-emoji">🍱</span><span>Set Meal</span></button>
-
-  <button onclick="showCategory('specials')"><span class="cat-emoji">⭐</span><span>Specialties</span></button>
-  <button onclick="showCategory('refreshments')"><span class="cat-emoji">🧊</span><span>Refreshments</span></button>
-  <button onclick="showCategory('drinks')"><span class="cat-emoji">🥤</span><span>Drinks</span></button>
-</div>
-
-      <!-- Product List -->
+      <!-- Product list -->
       <div id="menuList" class="menu-list"></div>
     </section>
 
+    <!-- Cart + Form -->
     <aside class="cart-col">
-      <!-- Cart -->
       <div class="card highlight breathe">
         <h2 class="card-title">🦾 Your Order</h2>
-
         <div id="cartItems" class="cart-items"></div>
 
-        <!-- Subtotal row -->
+        <!-- Subtotal -->
         <div class="cart-totals">
           <div class="row">
             <span>Subtotal</span>
-            <span id="cartSubtotal">₱0.00</span>
+            <span id="cartSubtotal">₱0</span>
           </div>
         </div>
 
@@ -129,11 +75,8 @@
         </div>
       </div>
 
-      <!-- Customer Info -->
       <div class="card">
         <h2 class="card-title">👤 Customer Info</h2>
-        <div class="card muted">
-
         <form id="orderForm" autocomplete="on">
           <label>Full Name
             <input type="text" id="fullName" required placeholder="Juan Dela Cruz">
@@ -144,10 +87,16 @@
           </label>
 
           <label>Order Type</label>
-         <div class="inline">
-            <label><input type="radio" name="orderType" value="Dine-in" required><span>Dine-in</span></label>
-            <label><input type="radio" name="orderType" value="Take-out" required><span>Take-out</span></label>
-        </div>
+          <div class="inline">
+            <label>
+              <input type="radio" name="orderType" value="Dine-in" required>
+              <span>Dine-in</span>
+            </label>
+            <label>
+              <input type="radio" name="orderType" value="Take-out" required>
+              <span>Take-out</span>
+            </label>
+          </div>
 
           <div id="personsWrap" class="hidden">
             <label>Number of Persons
@@ -173,14 +122,17 @@
       </div>
 
       <div class="card muted">
-        <p>💬 Need help?
-    <a href="#" id="howToOrderLink">How to Order</a>
-    or message us on Facebook / call
-    <a href="tel:0535680539">053 568 0539</a>.
-  </p>
-</div>
+        <p>
+          💬 Need help?
+          <a href="#" id="howToOrderLink">How to Order</a>
+          or message us on Facebook / call
+          <a href="tel:0535680539">053 568 0539</a>.
+        </p>
+      </div>
+    </aside>
+  </main>
 
-  <!-- Popups (kept for future use; not triggered here) -->
+  <!-- Popups -->
   <div id="categoryPopup" class="popup-backdrop hidden">
     <div class="popup">
       <button class="popup-close" aria-label="Close">×</button>
@@ -196,61 +148,38 @@
     </div>
   </div>
 
-  <!-- Success / GCash QR (disabled for now per request) -->
-  <div id="successPopup" class="popup-backdrop hidden">
-    <div class="popup">
+  <!-- How to Order Popup -->
+  <div id="howToOrderPopup" class="popup-backdrop hidden" aria-hidden="true">
+    <div class="popup" role="dialog" aria-modal="true" aria-labelledby="howtoTitle">
       <button class="popup-close" aria-label="Close">×</button>
-      <h3 class="popup-title">Order Received ✅</h3>
-      <div class="qr-wrap">
-        <img id="gcashQR" alt="GCash QR" src="assets/qr/gcash.png">
-      </div>
+      <h3 id="howtoTitle" class="popup-title">How to Order</h3>
+      <ol style="padding-left:20px; margin:10px 0;">
+        <li>Select a category and tap <strong>Add</strong> beside each dish.</li>
+        <li>Review <strong>Your Order</strong>; adjust quantities or remove items.</li>
+        <li>Fill in your details (Full Name, Mobile, Order Type).</li>
+        <li>If Dine-in → enter <strong>Number of Persons</strong>.</li>
+        <li>Pick your <strong>Date & Time</strong>.</li>
+        <li>Click <strong>Submit Order</strong> — you’ll see a confirmation toast.</li>
+      </ol>
+      <p class="small" style="color:#666;">Tip: Keep your phone nearby in case we need to confirm details.</p>
     </div>
   </div>
 
-  <!-- Toast Message -->
+  <!-- Toast -->
   <div id="toast" class="toast hidden"></div>
-  
-<!-- How to Order Popup -->
-<div id="howToOrderPopup" class="popup-backdrop hidden" aria-hidden="true">
-  <div class="popup" role="dialog" aria-modal="true" aria-labelledby="howtoTitle">
-    <button class="popup-close" aria-label="Close">×</button>
-    <h3 id="howtoTitle" class="popup-title">How to Order</h3>
 
-    <ol style="padding-left:20px; margin:10px 0;">
-      <li>Go to <strong>stonegrillresto.net/order</strong> (mobile or desktop).</li>
-      <li>Select a category and tap <strong>Add</strong> beside each dish.</li>
-      <li>Review <strong>Your Order</strong>; adjust quantities or remove items.</li>
-      <li>Fill in:
-        <ul>
-          <li><strong>Full Name</strong> & <strong>Mobile</strong> (+63 auto)</li>
-          <li><strong>Order Type</strong> (Dine-in / Take-out)
-            <ul><li>If Dine-in → enter <strong>Number of Persons</strong>.</li></ul>
-          </li>
-          <li><strong>Date & Time</strong> for dine-in/pick-up</li>
-          <li><strong>Special Requests</strong> (optional)</li>
-        </ul>
-      </li>
-      <li>Click <strong>Submit Order</strong> — you’ll see a confirmation toast.</li>
-      <li>We’ll message you for payment instructions. Orders are processed after payment.</li>
-    </ol>
+  <!-- Scripts -->
+  <script src="config.js?v=13"></script>
+  <script src="main.js?v=13"></script>
 
-    <p class="small" style="color:#666;">Tip: Keep your phone nearby in case we need to confirm details.</p>
-  </div>
-</div>
-  <!-- Scripts (config first). Bump version to bust cache -->
-  <script src="config.js?v=10"></script>
-  <script src="main.js?v=10"></script>
-
-  <!-- Register SW only on custom domain -->
+  <!-- Service worker (optional, safe) -->
   <script>
     if ('serviceWorker' in navigator) {
       const onGithubIo = location.hostname.endsWith('github.io');
       if (!onGithubIo) {
-        navigator.serviceWorker.register('pwa/sw.js?v=10').catch(() => {});
+        navigator.serviceWorker.register('pwa/sw.js?v=13').catch(()=>{});
       }
     }
   </script>
-  <script src="config.js?v=12"></script>
-<script src="main.js?v=12"></script>
 </body>
 </html>
