--- a/order/index.html
+++ b/order/index.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Stone Grill — Online Order</title>
-  <meta name="description" content="Order sizzling meals from Stone Grill Restaurant — Enjoyable & Relaxing." />
+  <!-- Charset & Viewport -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- PWA (optional) -->
+  <!-- Page Title -->
+  <title>Stone Grill Restaurant — Order Online</title>
+
+<meta name="description" content="Order sizzling plates, fresh seafood, and Filipino favorites from Stone Grill Restaurant in Leyte. Dine-in or take-out — fast, easy, and delicious!">
+<meta name="keywords" content="Stone Grill, Stone Grill Restaurant, sizzling plates, seafood Leyte, Filipino food, online order, dine-in, take-out, Bato Leyte restaurant">
+<meta name="author" content="Stone Grill Restaurant">
+<link rel="canonical" href="https://stonegrillresto.net/order/">
+
+<!-- Open Graph (Facebook / Messenger) -->
+<meta property="og:title" content="Stone Grill Restaurant — Order Online">
+<meta property="og:description" content="Enjoy hot sizzling meals, seafood platters, and more — order online for dine-in or take-out at Stone Grill Restaurant, Leyte.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://stonegrillresto.net/order/">
+<meta property="og:site_name" content="Stone Grill Restaurant">
+<meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Stone Grill Restaurant — Order Online">
+<meta name="twitter:description" content="Order sizzling plates, fresh seafood, and Filipino favorites from Stone Grill Restaurant.">
+<meta name="twitter:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
+
+<!-- PWA -->
+<link rel="manifest" href="pwa/manifest.webmanifest">
+<meta name="theme-color" content="#8db600">
+
+<!-- Icons -->
+<link rel="icon" href="assets/icons/favicon-32.png" sizes="32x32">
+<link rel="apple-touch-icon" href="assets/icons/apple-touch-180.png">
+
+<!-- JSON-LD Schema -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Restaurant",
+  "name": "Stone Grill Restaurant",
+  "image": "https://stonegrillresto.net/order/assets/og-order.jpg",
+  "description": "Sizzling plates, seafood, and Filipino favorites. Order online for dine-in or take-out.",
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "PH"
+  },
+  "telephone": "+63 53 568 0539",
+  "email": "stonegrill2014@gmail.com",
+  "url": "https://stonegrillresto.net/",
+  "sameAs": [
+    "https://www.facebook.com/stonecitygrill"
+  ]
+}
+</script>
+ <!-- PWA (optional) -->
   <link rel="manifest" href="pwa/manifest.webmanifest">
   <meta name="theme-color" content="#8db600">
 
@@ -16,13 +65,6 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css?v=13">
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Stone Grill — Online Order">
-  <meta property="og:description" content="Fast, easy online ordering. Dine-in or take-out.">
-  <meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
-  <meta property="og:url" content="https://stonegrillresto.net/order/">
-
   <!-- Safety: ensure .hidden works even if CSS fails -->
   <style>.hidden{display:none!important}</style>
 </head>
