--- a/order/index.html
+++ b/order/index.html
@@ -1,73 +1,76 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-  <!-- Charset & Viewport -->
+  <!-- Document Basics -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Page Title -->
   <title>Stone Grill Restaurant — Order Online</title>
 
-<meta name="description" content="Order sizzling plates, fresh seafood, and Filipino favorites from Stone Grill Restaurant in Leyte. Dine-in or take-out — fast, easy, and delicious!">
-<meta name="keywords" content="Stone Grill, Stone Grill Restaurant, sizzling plates, seafood Leyte, Filipino food, online order, dine-in, take-out, Bato Leyte restaurant">
-<meta name="author" content="Stone Grill Restaurant">
-<link rel="canonical" href="https://stonegrillresto.net/order/">
+  <!-- Meta Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '643206718690040');
+    fbq('track', 'PageView');
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none"
+         src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1" />
+  </noscript>
+  <!-- End Meta Pixel Code -->
 
-<!-- Open Graph (Facebook / Messenger) -->
-<meta property="og:title" content="Stone Grill Restaurant — Order Online">
-<meta property="og:description" content="Enjoy hot sizzling meals, seafood platters, and more — order online for dine-in or take-out at Stone Grill Restaurant, Leyte.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://stonegrillresto.net/order/">
-<meta property="og:site_name" content="Stone Grill Restaurant">
-<meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
+  <!-- Basic SEO -->
+  <meta name="description" content="Order sizzling plates, fresh seafood, and Filipino favorites from Stone Grill Restaurant in Leyte. Dine-in or take-out — fast, easy, and delicious!">
+  <meta name="keywords" content="Stone Grill, Stone Grill Restaurant, sizzling plates, seafood Leyte, Filipino food, online order, dine-in, take-out, Bato Leyte restaurant">
+  <meta name="author" content="Stone Grill Restaurant">
+  <link rel="canonical" href="https://stonegrillresto.net/order/">
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Stone Grill Restaurant — Order Online">
-<meta name="twitter:description" content="Order sizzling plates, fresh seafood, and Filipino favorites from Stone Grill Restaurant.">
-<meta name="twitter:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
+  <!-- Open Graph (Facebook / Messenger) -->
+  <meta property="og:title" content="Stone Grill Restaurant — Order Online">
+  <meta property="og:description" content="Enjoy hot sizzling meals, seafood platters, and more — order online for dine-in or take-out at Stone Grill Restaurant, Leyte.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://stonegrillresto.net/order/">
+  <meta property="og:site_name" content="Stone Grill Restaurant">
+  <meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
 
-<!-- PWA -->
-<link rel="manifest" href="pwa/manifest.webmanifest">
-<meta name="theme-color" content="#8db600">
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Stone Grill Restaurant — Order Online">
+  <meta name="twitter:description" content="Order sizzling plates, fresh seafood, and Filipino favorites from Stone Grill Restaurant.">
+  <meta name="twitter:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
 
-<!-- Icons -->
-<link rel="icon" href="assets/icons/favicon-32.png" sizes="32x32">
-<link rel="apple-touch-icon" href="assets/icons/apple-touch-180.png">
-
-<!-- JSON-LD Schema -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Restaurant",
-  "name": "Stone Grill Restaurant",
-  "image": "https://stonegrillresto.net/order/assets/og-order.jpg",
-  "description": "Sizzling plates, seafood, and Filipino favorites. Order online for dine-in or take-out.",
-  "address": {
-    "@type": "PostalAddress",
-    "addressCountry": "PH"
-  },
-  "telephone": "+63 53 568 0539",
-  "email": "stonegrill2014@gmail.com",
-  "url": "https://stonegrillresto.net/",
-  "sameAs": [
-    "https://www.facebook.com/stonecitygrill"
-  ]
-}
-</script>
- <!-- PWA (optional) -->
-  <link rel="manifest" href="pwa/manifest.webmanifest">
+  <!-- Theme / Icons / CSS -->
   <meta name="theme-color" content="#8db600">
-
-  <!-- Icons -->
   <link rel="icon" href="assets/icons/favicon-32.png" sizes="32x32">
   <link rel="apple-touch-icon" href="assets/icons/apple-touch-180.png">
-
-  <!-- Styles -->
   <link rel="stylesheet" href="style.css?v=13">
-  <!-- Safety: ensure .hidden works even if CSS fails -->
-  <style>.hidden{display:none!important}</style>
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Restaurant",
+    "name": "Stone Grill Restaurant",
+    "image": "https://stonegrillresto.net/order/assets/og-order.jpg",
+    "description": "Sizzling plates, seafood, and Filipino favorites. Order online for dine-in or take-out.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "PH"
+    },
+    "telephone": "+63 53 568 0539",
+    "email": "stonegrill2014@gmail.com",
+    "url": "https://stonegrillresto.net/",
+    "sameAs": [
+      "https://www.facebook.com/stonecitygrill"
+    ]
+  }
+  </script>
 </head>
+
 <body>
   <!-- Header -->
   <header class="app-header">
