--- a/order/index.html
+++ b/order/index.html
@@ -2,7 +2,7 @@
   <!-- Document Basics -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Stone Grill Restaurant — Order Online</title>
+  <title>Stone Grill's  — Online Reservation</title>
 
   <!-- Meta Pixel Code -->
   <script>
