--- a/order/howto.html
+++ b/order/howto.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>How to Order — Stone Grill Restaurant</title>
+  <title>How to Order -- Stone Grill Restaurant</title>
   <meta name="description" content="Simple, step-by-step guide to ordering online from Stone Grill Restaurant." />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="How to Order — Stone Grill" />
+  <meta property="og:title" content="How to Order -- Stone Grill" />
   <meta property="og:description" content="Follow these quick steps to place your order online." />
   <meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg" />
   <meta property="og:url" content="https://stonegrillresto.net/order/howto.html" />
@@ -93,7 +93,7 @@
   <main class="wrap">
     <section class="hero">
       <h2>How to Order Online</h2>
-      <p class="lead">Quick steps to get your sizzling favorites — dine-in or take-out.</p>
+      <p class="lead">Quick steps to get your sizzling favorites -- dine-in or take-out.</p>
     </section>
 
     <section class="card">
@@ -112,7 +112,7 @@
             <li><strong>Special Requests</strong> (optional)</li>
           </ul>
         </li>
-        <li>Click <strong>Submit Order</strong>. You’ll see a confirmation toast.</li>
+        <li>Click <strong>Submit Order</strong>. You'll see a confirmation toast.</li>
         <li>Our team will message you via SMS/Messenger with payment instructions.</li>
         <li><strong>Pay via GCash or in-store</strong>. We process orders once payment is confirmed.</li>
       </ol>
@@ -122,7 +122,7 @@
       <h3>Tips for a Smooth Order</h3>
       <ul class="tips">
         <li>Double-check your <strong>Date &amp; Time</strong> before submitting.</li>
-        <li>Keep your phone on — we may contact you for clarifications.</li>
+        <li>Keep your phone on -- we may contact you for clarifications.</li>
         <li>Have your <strong>GCash</strong> ready for quick confirmation.</li>
       </ul>
     </section>
@@ -131,7 +131,7 @@
       <div>Questions? Post in the comments or contact us.</div>
       <div class="inline-links">
         <a href="/order/">Back to Online Order</a>
-        <a href="https://www.facebook.com/stonecitygrill" target="_blank" rel="noopener">Facebook Page</a>
+        <a href="https://www.stonegrillresto.net" target="_blank" rel="noopener"> Official Page</a>
         <a class="phone" href="tel:0535680539">053 568 0539</a>
       </div>
     </section>
