--- a/order/index.html
+++ b/order/index.html
@@ -171,7 +171,7 @@
       <div class="card muted">
         <p>
           💬 Need help?
-          <a href="#" id="howToOrderLink">How to Order</a>
+          <a href="#" id="https://stonegrillresto.net/order/howto">How to Order</a>
           or message us on Facebook / call
           <a href="tel:0535680539">053 568 0539</a>.
         </p>
