--- a/order/index.html
+++ b/order/index.html
@@ -40,7 +40,6 @@
   <meta property="og:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
   <meta property="fb:app_id" content="2895055444086567">
 
-
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Stone Grill Restaurant — Order Online">
@@ -73,7 +72,8 @@
     ]
   }
   </script>
-    <!-- NEW: Minimal styles for payment popup -->
+
+  <!-- NEW: Minimal styles for the GCash Payment popup (safe to move to style.css) -->
   <style>
     .tabbar { display:flex; gap:8px; margin:8px 0 12px; }
     .tabbar .tab { padding:8px 12px; border-radius:8px; border:1px solid #ddd; cursor:pointer; }
@@ -231,9 +231,7 @@
     </div>
   </div>
 
-  <!-- Toast -->
-  <div id="toast" class="toast hidden"></div>
-    <!-- NEW: GCash Payment Popup -->
+  <!-- NEW: GCash Payment Popup (QR / Mobile tabs + Receipt upload) -->
   <div id="paymentPopup" class="popup-backdrop hidden" aria-hidden="true">
     <div class="popup" role="dialog" aria-modal="true" aria-labelledby="payTitle">
       <button class="popup-close" aria-label="Close">×</button>
@@ -279,145 +277,150 @@
     </div>
   </div>
 
+  <!-- Toast -->
+  <div id="toast" class="toast hidden"></div>
+
   <!-- Scripts -->
   <script src="config.js?v=13"></script>
   <script src="main.js?v=13"></script>
 
-  <!-- Service worker (optional, safe) --><!-- NEW: Payment popup + direct-to-Telegram receipt upload -->
-<script>
-(function () {
-  // Helper: show/hide
-  function show(el){ el.classList.remove('hidden'); el.setAttribute('aria-hidden','false'); }
-  function hide(el){ el.classList.add('hidden'); el.setAttribute('aria-hidden','true'); }
+  <!-- NEW: Payment popup controller + Direct-to-Telegram receipt upload -->
+  <script>
+  (function () {
+    // Helpers
+    function show(el){ el.classList.remove('hidden'); el.setAttribute('aria-hidden','false'); }
+    function hide(el){ el.classList.add('hidden'); el.setAttribute('aria-hidden','true'); }
 
-  // Tabs
-  const tabQR = document.getElementById('tabQR');
-  const tabNumber = document.getElementById('tabNumber');
-  const paneQR = document.getElementById('paneQR');
-  const paneNumber = document.getElementById('paneNumber');
-  function activate(tab, pane) {
-    [tabQR, tabNumber].forEach(t => t.classList.remove('active'));
-    [paneQR, paneNumber].forEach(p => p.classList.remove('active'));
-    tab.classList.add('active'); pane.classList.add('active');
-    tab.setAttribute('aria-selected','true');
-    (tab === tabQR ? tabNumber : tabQR).setAttribute('aria-selected','false');
-  }
-  if (tabQR && tabNumber) {
-    tabQR.addEventListener('click', () => activate(tabQR, paneQR));
-    tabNumber.addEventListener('click', () => activate(tabNumber, paneNumber));
-  }
+    // Tabs
+    const tabQR = document.getElementById('tabQR');
+    const tabNumber = document.getElementById('tabNumber');
+    const paneQR = document.getElementById('paneQR');
+    const paneNumber = document.getElementById('paneNumber');
+    function activate(tab, pane) {
+      [tabQR, tabNumber].forEach(t => t.classList.remove('active'));
+      [paneQR, paneNumber].forEach(p => p.classList.remove('active'));
+      tab.classList.add('active'); pane.classList.add('active');
+      tab.setAttribute('aria-selected','true');
+      (tab === tabQR ? tabNumber : tabQR).setAttribute('aria-selected','false');
+    }
+    if (tabQR && tabNumber) {
+      tabQR.addEventListener('click', () => activate(tabQR, paneQR));
+      tabNumber.addEventListener('click', () => activate(tabNumber, paneNumber));
+    }
 
-  // Copy number
-  const btnCopy = document.getElementById('btnCopyNumber');
-  if (btnCopy) {
-    btnCopy.addEventListener('click', async () => {
-      const txt = document.getElementById('gcashMobileText').textContent.trim();
-      try { await navigator.clipboard.writeText(txt); btnCopy.textContent = 'Copied'; setTimeout(()=>btnCopy.textContent='Copy',1200); }
-      catch { alert('Copy failed. Please long-press and copy.'); }
+    // Copy number
+    const btnCopy = document.getElementById('btnCopyNumber');
+    if (btnCopy) {
+      btnCopy.addEventListener('click', async () => {
+        const txt = document.getElementById('gcashMobileText').textContent.trim();
+        try { await navigator.clipboard.writeText(txt); btnCopy.textContent = 'Copied'; setTimeout(()=>btnCopy.textContent='Copy',1200); }
+        catch { alert('Copy failed. Please long-press and copy.'); }
+      });
+    }
+
+    // Close button
+    document.querySelectorAll('#paymentPopup .popup-close').forEach(btn => {
+      btn.addEventListener('click', () => hide(document.getElementById('paymentPopup')));
     });
-  }
 
-  // Close button
-  document.querySelectorAll('#paymentPopup .popup-close').forEach(btn => {
-    btn.addEventListener('click', () => hide(document.getElementById('paymentPopup')));
-  });
+    // Expose: call this after successful order (from main.js)
+    window.showGcashPopup = function(orderId, totalAmount) {
+      const pop = document.getElementById('paymentPopup');
+      document.getElementById('payOrderId').textContent = orderId || '—';
+      document.getElementById('payTotal').textContent = (typeof totalAmount === 'number'
+        ? '₱' + totalAmount.toLocaleString()
+        : (totalAmount || '₱0'));
 
-  // Expose a function your existing code can call after successful order
-  // Call: window.showGcashPopup(orderId, totalAmount)
-  window.showGcashPopup = function(orderId, totalAmount) {
-    const pop = document.getElementById('paymentPopup');
-    document.getElementById('payOrderId').textContent = orderId || '—';
-    document.getElementById('payTotal').textContent = (typeof totalAmount === 'number' ? '₱' + totalAmount.toLocaleString() : (totalAmount || '₱0'));
+      // Fill QR & number from config
+      const qr = (window.APP && (window.APP.GCASH_QR_URL || window.APP.gcashQrUrl));
+      const qrImg = document.getElementById('gcashQrImg');
+      qrImg.src = qr || 'assets/placeholder-qr.png';
 
-    // Fill QR (from APP config)
-    const qr = (window.APP && (window.APP.GCASH_QR_URL || window.APP.gcashQrUrl));
-    const qrImg = document.getElementById('gcashQrImg');
-    qrImg.src = qr || 'assets/placeholder-qr.png';
+      const mobileTxt = document.getElementById('gcashMobileText');
+      const acctName = document.getElementById('gcashAccountName');
+      const mobile = window.APP && (window.APP.GCASH_MOBILE || window.APP.gcashMobile);
+      const acct   = window.APP && (window.APP.GCASH_ACCOUNT_NAME || window.APP.gcashAccountName);
+      if (mobile) mobileTxt.textContent = mobile;
+      if (acct)   acctName.textContent = 'Account: ' + acct;
 
-    // Fill Mobile number and Account name (optional APP config)
-    const mobileTxt = document.getElementById('gcashMobileText');
-    const acctName = document.getElementById('gcashAccountName');
-    const mobile = window.APP && (window.APP.GCASH_MOBILE || window.APP.gcashMobile);
-    const acct   = window.APP && (window.APP.GCASH_ACCOUNT_NAME || window.APP.gcashAccountName);
-    if (mobile) mobileTxt.textContent = mobile;
-    if (acct)   acctName.textContent = 'Account: ' + acct;
+      // Default to QR tab
+      activate(tabQR, paneQR);
+      show(pop);
 
-    // Default to QR tab on open
-    activate(tabQR, paneQR);
-    show(pop);
+      // Save globals for caption
+      window.currentOrderId = orderId || '';
+      window.currentOrderTotal = totalAmount || '';
+    };
 
-    // Keep a global for caption use
-    window.currentOrderId = orderId || '';
-    window.currentOrderTotal = totalAmount || '';
-  };
+    // === Direct-to-Telegram receipt upload ===
+    const sendBtn = document.getElementById('btnSendReceipt');
+    const fileInput = document.getElementById('gcashReceiptInput');
+    const statusEl = document.getElementById('receiptStatus');
 
-  // === Direct-to-Telegram receipt upload ===
-  const sendBtn = document.getElementById('btnSendReceipt');
-  const fileInput = document.getElementById('gcashReceiptInput');
-  const statusEl = document.getElementById('receiptStatus');
+    function getField(id, fallback='') {
+      const el = document.getElementById(id);
+      return (el && el.value || fallback).toString().trim();
+    }
 
-  function getField(id, fallback='') {
-    const el = document.getElementById(id);
-    return (el && el.value || fallback).toString().trim();
-  }
-
-  if (sendBtn && fileInput && statusEl) {
-    sendBtn.addEventListener('click', async () => {
-      if (!fileInput.files || !fileInput.files.length) {
-        statusEl.textContent = 'Please select a receipt image first.';
-        return;
-      }
-      const token = window.APP && (window.APP.TELEGRAM_BOT_TOKEN || window.APP.telegramBotToken);
-      const chatId = window.APP && (window.APP.TELEGRAM_CHAT_ID || window.APP.telegramChatId);
-      if (!token || !chatId) {
-        statusEl.textContent = 'Bot is not configured. Please contact the restaurant.';
-        return;
-      }
-
-      statusEl.textContent = 'Sending receipt…';
-
-      const fullName = getField('fullName', 'Unknown Customer');
-      const mobile   = getField('mobileNumber', 'N/A');
-      const orderId  = (window.currentOrderId || 'N/A');
-      const total    = (window.currentOrderTotal ? `₱${window.currentOrderTotal}` : null);
-
-      const caption = [
-        '🧾 GCash Receipt Received',
-        `• Order ID: ${orderId}`,
-        total ? `• Total: ${total}` : null,
-        `• Name: ${fullName}`,
-        `• Mobile: ${mobile}`
-      ].filter(Boolean).join('\n');
-
-      const file = fileInput.files[0];
-      const isImage = /^image\//i.test(file.type);
-
-      const formData = new FormData();
-      formData.append('chat_id', chatId);
-      formData.append('caption', caption);
-      formData.append(isImage ? 'photo' : 'document', file);
-
-      try {
-        const res = await fetch(`https://api.telegram.org/bot${token}/${isImage ? 'sendPhoto' : 'sendDocument'}`, {
-          method: 'POST',
-          body: formData
-        });
-        if (res.ok) {
-          statusEl.textContent = '✅ Receipt sent to our team. We’ll verify and update you.';
-          fileInput.value = '';
-        } else {
-          const t = await res.text().catch(()=>'');
-          console.error('Telegram error:', t);
-          statusEl.textContent = '❌ Failed to send. Please try again.';
+    if (sendBtn && fileInput && statusEl) {
+      sendBtn.addEventListener('click', async () => {
+        if (!fileInput.files || !fileInput.files.length) {
+          statusEl.textContent = 'Please select a receipt image first.';
+          return;
         }
-      } catch (err) {
-        console.error(err);
-        statusEl.textContent = '❌ Error sending receipt. Check your connection and try again.';
-      }
-    });
-  }
-})();
-</script>
+        const token = window.APP && (window.APP.TELEGRAM_BOT_TOKEN || window.APP.telegramBotToken);
+        const chatId = window.APP && (window.APP.TELEGRAM_CHAT_ID || window.APP.telegramChatId);
+        if (!token || !chatId) {
+          statusEl.textContent = 'Bot is not configured. Please contact the restaurant.';
+          return;
+        }
+
+        statusEl.textContent = 'Sending receipt…';
+
+        const fullName = getField('fullName', 'Unknown Customer');
+        const mobile   = getField('mobileNumber', 'N/A');
+        const orderId  = (window.currentOrderId || 'N/A');
+        const total    = (window.currentOrderTotal ? `₱${window.currentOrderTotal}` : null);
+
+        const caption = [
+          '🧾 GCash Receipt Received',
+          `• Order ID: ${orderId}`,
+          total ? `• Total: ${total}` : null,
+          `• Name: ${fullName}`,
+          `• Mobile: ${mobile}`
+        ].filter(Boolean).join('\n');
+
+        const file = fileInput.files[0];
+        const isImage = /^image\//i.test(file.type);
+
+        const formData = new FormData();
+        formData.append('chat_id', chatId);
+        formData.append('caption', caption);
+        formData.append(isImage ? 'photo' : 'document', file);
+
+        try {
+          const res = await fetch(`https://api.telegram.org/bot${token}/${isImage ? 'sendPhoto' : 'sendDocument'}`, {
+            method: 'POST',
+            body: formData
+          });
+          if (res.ok) {
+            statusEl.textContent = '✅ Receipt sent to our team. We’ll verify and update you.';
+            fileInput.value = '';
+          } else {
+            const t = await res.text().catch(()=> '');
+            console.error('Telegram error:', t);
+            statusEl.textContent = '❌ Failed to send. Please try again.';
+          }
+        } catch (err) {
+          console.error(err);
+          statusEl.textContent = '❌ Error sending receipt. Check your connection and try again.';
+        }
+      });
+    }
+  })();
+  </script>
+
+  <!-- Service worker (optional, safe) -->
   <script>
     if ('serviceWorker' in navigator) {
       const onGithubIo = location.hostname.endsWith('github.io');
