--- a/order/index.html
+++ b/order/index.html
@@ -43,7 +43,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Stone Grill Restaurant — Order Online">
-  <meta name="twitter:description" content="Order sizzling plates, fresh seafood, and Filipino favorites from Stone Grill Restaurant.">
+  <meta name="twitter:description" content="Order sizzling plates, seafood, and Filipino favorites from Stone Grill Restaurant.">
   <meta name="twitter:image" content="https://stonegrillresto.net/order/assets/og-order.jpg">
 
   <!-- Theme / Icons / CSS -->
@@ -68,7 +68,7 @@
   }
   </script>
 
-  <!-- Minimal styles just for the GCash popup -->
+  <!-- Minimal styles just for the GCash popup + floating button -->
   <style>
     .gcash-number { font-size:1.1rem; letter-spacing:.5px; font-weight:600; }
     .receipt-upload-block { margin-top:12px; padding:12px; border-radius:10px; background:rgba(0,0,0,0.04); }
@@ -221,7 +221,7 @@
     </div>
   </div>
 
-  <!-- GCash Payment Popup (manual open; Camera + Photo Album allowed) -->
+  <!-- GCash Payment Popup (manual + auto after order; album-first upload) -->
   <div id="paymentPopup" class="popup-backdrop hidden" aria-hidden="true">
     <div class="popup" role="dialog" aria-modal="true" aria-labelledby="payTitle">
       <button class="popup-close" aria-label="Close">×</button>
@@ -240,7 +240,7 @@
 
       <div class="receipt-upload-block">
         <h4>Upload Payment Receipt</h4>
-        <!-- IMPORTANT: no 'capture' attribute so iOS shows Camera OR Photo Library -->
+        <!-- Album-first: no 'capture' so iOS/Android show Photo Library / Files (camera still available as an option) -->
         <input id="gcashReceiptInput" type="file" accept="image/*,application/pdf">
         <button id="btnSendReceipt" class="btn primary">Send Receipt to Stone Grill</button>
         <div id="receiptStatus" class="receipt-status" aria-live="polite"></div>
@@ -257,16 +257,16 @@
   </button>
 
   <!-- Scripts -->
-  <script src="config.js?v=14"></script>
-  <script src="main.js?v=14"></script>
+  <script src="config.js?v=15"></script>
+  <script src="main.js?v=15"></script>
 
-  <!-- Payment popup controller + Direct-to-Telegram receipt upload -->
+  <!-- Payment popup controller + Telegram upload + auto-open after order -->
   <script>
   (function () {
     function showBackdrop(el){ el.classList.add('show'); el.classList.remove('hidden'); el.setAttribute('aria-hidden','false'); }
     function hideBackdrop(el){ el.classList.remove('show'); el.classList.add('hidden'); el.setAttribute('aria-hidden','true'); }
 
-    // Manual open button
+    // Manual open button (customers can return any time)
     (function () {
       var btn = document.getElementById('openPayPopupBtn');
       if (!btn) return;
@@ -283,7 +283,7 @@
         hideBackdrop(document.getElementById('paymentPopup'));
       }
     });
-    // Close when clicking backdrop
+    // Close on backdrop click
     document.getElementById('paymentPopup').addEventListener('click', function(e){
       if (e.target === this) hideBackdrop(this);
     });
@@ -297,7 +297,7 @@
       }
     });
 
-    // Expose: can be called manually OR by main.js (if you later want auto)
+    // Expose: can be called manually OR programmatically
     window.showGcashPopup = function(orderId, totalAmount) {
       const pop = document.getElementById('paymentPopup');
       if (!pop) return;
@@ -319,6 +319,24 @@
 
       showBackdrop(pop);
     };
+
+    // === Auto-open after order is sent (without modifying main.js) ===
+    // We wrap sendToTelegram to show the popup on success.
+    (function wrapSend(){
+      if (typeof window.sendToTelegram !== 'function') return;
+      var orig = window.sendToTelegram;
+      window.sendToTelegram = function(text){
+        // capture total before main.js clears cart
+        var totalBefore = (typeof cartSubtotal === 'function') ? cartSubtotal() : null;
+        var orderId = 'ORD-' + Date.now();
+        return orig(text).then(function(res){
+          if (typeof window.showGcashPopup === 'function') {
+            window.showGcashPopup(orderId, totalBefore);
+          }
+          return res;
+        });
+      };
+    })();
 
     // Receipt upload (direct to Telegram; CORS-safe fallback)
     document.addEventListener('click', async (e)=>{
